# PiSCOPE

./: PiSCOPE_ILI9341.uf2  PiSCOPE_ST7789.uf2  README.md
PiSCOPE_First_test/: PiSCOPE_ILI9341.uf2  PiSCOPE_ST7789.uf2
PiSCOPE_v1.1/Firmware/: PiSCOPE_ILI9341_v1.1.uf2  PiSCOPE_ST7789_v1.1.uf2  RP2040_ILI9341_v1.1.1.uf2  RP2040_ILI9341_v1.1.2.uf2  RP2040_ST7789_v1.1.1.uf2  RP2040_ST7789_v1.1.2.uf2  RP2350A_ILI9341_v1.1.1.uf2  RP2350A_ILI9341_v1.1.2.uf2  RP2350A_ST7789_v1.1.1.uf2  RP2350A_ST7789_v1.1.2.uf2
Source-adc_test/: CMakeLists.txt
Source-adc_test/Source/: ADC_captures.pio  CMakeLists.txt  LCD.c  LCD.h  LCD_SPI.pio  main.c
